Build TL-MR3020-V3

--- a/README
+++ b/README
@@ -14,6 +14,9 @@ of a case sensitive file system.
 You need gcc, binutils, bzip2, flex, python, perl, make, find, grep, diff,
 unzip, gawk, getopt, subversion, libz-dev and libc headers installed.
 
+git clone --branch TL-MR3020-V3 https://github.com/sihiver/openwrt.git
+cd openwrt
+
 1. Run "./scripts/feeds update -a" to obtain all the latest package definitions
 defined in feeds.conf / feeds.conf.default
 
